Fix T43159: Copying of linked datablocks using relpath leads to invalid paths in new copies.

Simply have to rebase onto main filepath when copying, if source datablock is lib and path is relative.

Afaict, only affected Image and Text datablocks. MovieClip would also be a candidate, but has
no copy implemented currently.